--- a/reactive-user-interfaces/package.json
+++ b/reactive-user-interfaces/package.json
@@ -15,5 +15,6 @@
     "build": "react-app-rewired build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "http://bruce-luo.me/reactive-user-interfaces/week03/class01/"
 }
