--- a/reactive-user-interfaces/tsconfig.json
+++ b/reactive-user-interfaces/tsconfig.json
@@ -3,12 +3,12 @@
     "target": "es6",
     "module": "es2015",
     "moduleResolution": "node",
-    "baseUrl": "./node_modules",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowJs": true,
     "noEmit": true
   },
+  "typeAcquisition": {"enable": true},
   "exclude": [
     "node_modules",
     "public"
