--- a/reactive-user-interfaces/reactive-user-interfaces.csproj
+++ b/reactive-user-interfaces/reactive-user-interfaces.csproj
@@ -76,12 +76,13 @@
     <Content Include="build\static\css\main.c17080f1.css" />
     <Content Include="build\static\js\main.ee7b2412.js" />
     <Content Include="build\static\media\logo.5d5d9eef.svg" />
+    <Content Include="src\Button.css" />
+    <Content Include="src\Button.jsx" />
     <Content Include="src\App.css" />
-    <Content Include="src\App.js" />
+    <Content Include="src\App.jsx" />
     <Content Include="src\App.test.js" />
     <Content Include="src\index.css" />
     <Content Include="src\index.js" />
-    <Content Include="src\logo.svg" />
     <Content Include="src\registerServiceWorker.js" />
     <Content Include="tsconfig.json" />
     <Content Include="package.json" />
