--- a/reactive-user-interfaces/package.json
+++ b/reactive-user-interfaces/package.json
@@ -12,5 +12,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "http://bruce-luo.me/reactive-user-interfaces/week04/class02/"
 }
