--- a/reactive-user-interfaces/package.json
+++ b/reactive-user-interfaces/package.json
@@ -6,7 +6,10 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "lodash": "^4.17.10",
+    "marked": "^0.3.19",
+    "contentful": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
