--- a/reactive-user-interfaces/reactive-user-interfaces.csproj
+++ b/reactive-user-interfaces/reactive-user-interfaces.csproj
@@ -76,18 +76,22 @@
     <Content Include="build\static\css\main.c17080f1.css" />
     <Content Include="build\static\js\main.ee7b2412.js" />
     <Content Include="build\static\media\logo.5d5d9eef.svg" />
+    <Content Include="src\components\WorkListEntry.css" />
+    <Content Include="src\components\WorkListEntry.js" />
+    <Content Include="src\components\WorkCategories.css" />
+    <Content Include="src\components\WorkCategories.js" />
     <Content Include="src\routes\CategoryPage.css" />
     <Content Include="src\routes\CategoryPage.js" />
     <Content Include="src\routes\WorkPage.css" />
     <Content Include="src\routes\WorkPage.js" />
-    <Content Include="src\routes\HomePage.css" />
-    <Content Include="src\routes\HomePage.js" />
     <Content Include="src\App.css" />
     <Content Include="src\App.js" />
     <Content Include="src\App.test.js" />
     <Content Include="src\index.css" />
     <Content Include="src\index.js" />
     <Content Include="src\registerServiceWorker.js" />
+    <Content Include="src\ApiCalls.js" />
+    <Content Include="src\store.js" />
     <Content Include="tsconfig.json" />
     <Content Include="package.json" />
     <Content Include="README.md" />
@@ -110,7 +114,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
-    <Folder Include="src\components\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
