update building homepage

--- a/reactive-user-interfaces/package.json
+++ b/reactive-user-interfaces/package.json
@@ -2,6 +2,7 @@
   "name": "reactive-user-interfaces",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://bruce-luo.me/works-r/",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
